--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,19 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@theme {
+  --color-primary: #273253;
+  --color-secondary: #de2424;
+  --color-tertiary: #f4f1f2;
+}
+
+@layer base {
+  h1 {
+    @apply text-2xl md:text-3xl lg:text-4xl;
+  }
+}
+
+.glass-nav {
+  backdrop-filter: blur(5px) saturate(100%);
+}
